[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/altonen/emissary"
description = "Rust implementation of the I2P protocol stack"
readme = "README.md"
authors = []
keywords = ["i2p", "network", "privacy"]
categories = []

[workspace]
resolver = "2"

members = [
  "emissary-cli",
  "emissary-core",
  "emissary-util",
]

default-members = ["emissary-cli"]

[workspace.dependencies]
anyhow = "1.0.98"
ed25519-dalek = { version = "2.1.1", default-features = false }
flate2 = "1.1.1"
futures = "0.3.31"
nom = { version = "7.1.3", default-features = false }
parking_lot = "0.12.3"
rand = "0.8.5"
rand_core = { version = "0.6.3", default-features = false }
reqwest = { version = "0.12.19", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
tempfile = "3.20.0"
tokio-util = { version = "0.7.15", features = ["compat"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter", "time"] }
tracing = { version = "0.1.41", default-features = false }
x25519-dalek = { version = "2.0.1", default-features = false }
yosemite = { version = "0.4.2", features = ["async-extra"] }

[profile.testnet]
inherits = "release"
debug = 1
debug-assertions = true
overflow-checks = true
