[package]
name = "emissary-base"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aes = { version = "0.8.4", default-features = false }
cbc = { version = "0.1.2", features = ["alloc"], default-features = false }
chacha20poly1305 = { version = "0.10.1", features = ["alloc"], default-features = false }
data-encoding = { version = "2.6.0", features = ["alloc"], default-features = false  }
ed25519-dalek = { version = "2.1.1", features = ["alloc"], default-features = false }
futures = { version = "0.3.30", default-features = false }
hashbrown = "0.14.5"
hmac = { version = "0.12.1", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
nom = { version = "7.1.3", features = ["alloc"], default-features = false }
rand_core = { version = "0.6.4", features = ["alloc"], default-features = false }
sha2 = { version = "0.10.8", default-features = false }
siphasher = { version = "1.0.1", default-features = false }
thingbuf = { version = "0.1.6", features = ["alloc"], default-features = false }
tracing = { version = "0.1.40", default-features = false }
x25519-dalek = { version = "2.0.1", features = ["reusable_secrets", "static_secrets", "zeroize"], default-features = false  }
zerocopy = { version = "0.7.35", features = ["derive"], default-features = false }
zeroize = { version = "1.8.1", features = ["alloc"], default-features = false }

[lib]
name = "emissary"
