[package]
name = "emissary-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aes = { version = "0.8.4", default-features = false }
bytes = { version = "1.6.1", default-features = false }
cbc = { version = "0.1.2", features = ["alloc"], default-features = false }
chacha20 = { version = "0.9.1", features = ["zeroize"], default-features = false }
chacha20poly1305 = { version = "0.10.1", features = ["alloc"], default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["alloc"] }
curve25519-elligator2 = { version = "0.1.0-alpha.2", default-features = false, features = ["elligator2", "alloc"] }
data-encoding = { version = "2.6.0", features = ["alloc"], default-features = false }
ecb = { version = "0.1.2", features = ["alloc"], default-features = false }
ed25519-dalek = { version = "2.1.1", features = ["alloc", "rand_core"], default-features = false }
futures = { package = "futures-util", version = "0.3.30", features = ["alloc"], default-features = false }
futures-channel = { version = "0.3.30", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.14.5", features = ["ahash", "inline-more"], default-features = false }
hmac = { version = "0.12.1", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
nom = { version = "7.1.3", features = ["alloc"], default-features = false }
parking_lot = { version = "0.12.3", optional = true }
rand_core = { version = "0.6.4", features = ["alloc"], default-features = false }
sha2 = { version = "0.10.8", default-features = false }
siphasher = { version = "1.0.1", default-features = false }
spin = { version = "0.9.8", features = ["rwlock"], default-features = false, optional = true }
thingbuf = { version = "0.1.6", features = ["alloc"], default-features = false }
tracing = { version = "0.1.40", default-features = false }
uint = { version = "0.9.5", default-features = false }
x25519-dalek = { version = "2.0.1", features = ["reusable_secrets", "static_secrets", "zeroize"], default-features = false }
zerocopy = { version = "0.7.35", features = ["derive"], default-features = false }
zeroize = { version = "1.8.1", features = ["alloc"], default-features = false }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
rand_core = { version = "0.6.4", features = ["getrandom"], default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["chrono", "env-filter", "time"] }
once_cell = "1.19.0"
rand = "0.8.5"
flate2 = "1.0.33"

[features]
default = ["std"]
std = ["dep:parking_lot"]
no_std = ["dep:spin"]

[lib]
name = "emissary"
