[package]
name = "emissary-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
ctrlc = "3.4.5"
emissary-core = { version = "0.1.0", features = ["std"] }
emissary-util = { path = "../emissary-util", features = ["tokio"] }
futures = "0.3.30"
home = "0.5.9"
httparse = "1.9.5"
iced = { version = "0.13.1", features = ["advanced", "tokio"], optional = true }
igd-next = { version = "0.16.0", default-features = false, features = ["aio_tokio"] }
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"
natpmp = "0.5.0"
netdev = { version = "0.32.0", default-features = false }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
toml = "0.8.14"
url = "2.5.4"

# workspace dependencies
anyhow = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
flate2 = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true, features = ["log"] }
x25519-dalek = { workspace = true, features = ["getrandom", "static_secrets"] }
yosemite = { workspace = true }

[dev-dependencies]
tempfile = "3.10.1"

[features]
default = ["router-ui"]
router-ui = ["iced"]
