[package]
name = "emissary-cli"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
axum = { version = "0.8.3", features = ["ws", "macros"], optional = true }
clap = { version = "4.5.35", features = ["derive"] }
ctrlc = "3.4.5"
emissary-core = { path = "../emissary-core", version = "0.2.0", features = ["std"] }
emissary-util = { path = "../emissary-util", version = "0.2.0", features = ["tokio"] }
futures = "0.3.31"
home = "=0.5.9"
httparse = "1.10.1"
iced = { version = "0.13.1", features = ["advanced", "tokio"], optional = true }
igd-next = { version = "0.16.1", default-features = false, features = ["aio_tokio"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
natpmp = "0.5.0"
netdev = { version = "0.33.0", default-features = false }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls"] }
serde_json = { version = "1.0.140", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio-tungstenite = { version = "0.26.2", optional = true }
toml = "0.8.20"
url = "2.5.4"

# workspace dependencies
anyhow = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core", "fast"] }
flate2 = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true, features = ["log"] }
x25519-dalek = { workspace = true, features = ["getrandom", "static_secrets", "precomputed-tables"] }
yosemite = { workspace = true }

[dev-dependencies]
tempfile = "3.19.1"

[features]
default = ["native-ui"]
native-ui = ["iced"]
web-ui = ["axum", "serde_json", "tokio-tungstenite"]
