[package]
name = "emissary-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aes = { version = "0.8.4", default-features = false }
bytes = { version = "1.6.1", default-features = false }
cbc = { version = "0.1.2", default-features = false, features = ["alloc"] }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc"] }
chacha20 = { version = "0.9.1", default-features = false, features = ["zeroize"] }
chrono = { version = "0.4.38", default-features = false, features = ["alloc"] }
curve25519-elligator2 = { version = "0.1.0-alpha.2", default-features = false, features = ["elligator2", "alloc"] }
data-encoding = { version = "2.6.0", default-features = false, features = ["alloc"] }
ecb = { version = "0.1.2", default-features = false, features = ["alloc"] }
ethbloom = { version = "0.14.1", default-features = false }
futures-channel = { version = "0.3.30", default-features = false, features = ["alloc"] }
futures = { package = "futures-util", version = "0.3.30", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.14.5", default-features = false, features = ["ahash", "inline-more"] }
hmac = { version = "0.12.1", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
parking_lot = { version = "0.12.3", optional = true }
sha2 = { version = "0.10.8", default-features = false }
siphasher = { version = "1.0.1", default-features = false }
spin = { version = "0.9.8", default-features = false, features = ["rwlock"], optional = true }
thingbuf = { version = "0.1.6", default-features = false, features = ["alloc"] }
uint = { version = "0.9.5", default-features = false }
zeroize = { version = "1.8.1", default-features = false, features = ["alloc"] }

# workspace dependencies
ed25519-dalek = { workspace = true, features = ["alloc", "rand_core"] }
nom = { workspace = true, features = ["alloc"] }
rand_core = { workspace = true, features = ["alloc"] }
tracing = { workspace = true }
x25519-dalek = { workspace = true, features = ["reusable_secrets", "static_secrets", "zeroize"] }

[dev-dependencies]
futures-io = "0.3.31"
once_cell = "1.19.0"

# workspace dependencies
flate2 = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
rand = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["std"]
std = ["dep:parking_lot"]
no_std = ["dep:spin"]
