[package]
name = "emissary-lib"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ed25519-dalek = "2.1.1"
nom = "7.1.3"
thiserror = "1.0.61"
tracing = "0.1.40"
x25519-dalek = "2.0.1"
