[package]
name = "emissary-lib"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aes = { version = "0.8.4", default-features = false }
cbc = "0.1.2"
data-encoding = { version = "2.6.0", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2.1.1", default-features = false }
futures = "0.3.30"
hashbrown = "0.14.5"
hmac = { version = "0.12.1", default-features = false }
lazy_static = "1.5.0"
nom = { version = "7.1.3", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
siphasher = { version = "1.0.1", default-features = false }
tracing = { version = "0.1.40",default-features = false }
zerocopy = {version = "0.7.35", features = ["derive"] }
zeroize = "1.8.1"

# TODO: `default-features = false`
x25519-dalek = { version = "2.0.1", features = ["getrandom", "reusable_secrets", "static_secrets"] }
chacha20poly1305 = "0.10.1"
