[package]
name = "emissary-node"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
home = "0.5.9"
nom = "6.1.2"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zip = { version = "2.1.3", features = ["deflate-zlib-ng"], default-features = false }
