[package]
name = "emissary-node"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
emissary-lib = { path = "../emissary-lib" }
futures = "0.3.30"
home = "0.5.9"
nom = "6.1.2"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio-util = { version = "0.7.11", features = ["compat"] }
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = { version = "0.1.40", features = ["log"] }
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
zip = { version = "2.1.3", features = ["deflate-zlib-ng"], default-features = false }
