[package]
name = "emissary-util"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-std = { version = "1.13.1", features = ["unstable"], optional = true }
emissary-core = { path = "../emissary-core", version = "0.2.0", features = ["std"] }
flate2 = "1.1.1"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
pem = "3.0.5"
reqwest = {version = "0.12.15", default-features = false, features = ["default-tls"] }
rsa = { version = "0.9.8", features = ["sha2"] }
tempfile = "3.19.1"
x509-parser = "0.17.0"
zip = { version = "2.5.0", default-features = false, features = ["deflate-zlib-ng"] }

# workspace dependencies
anyhow = { workspace = true }
futures = { workspace = true }
nom = { workspace = true, features = ["alloc"] }
rand_core = { workspace = true }
rand = { workspace = true }
tokio-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, features = ["log"] }

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:tokio-util"]
async-std = ["dep:async-std"]
