[package]
name = "emissary-util"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-std = { version = "1.13.1", features = ["unstable"], optional = true }
emissary-core = { path = "../emissary-core", version = "0.2.0", features = ["std"] }
flate2 = "1.1.1"
metrics = { version = "0.24.1", optional = true }
metrics-exporter-prometheus = { version = "0.17.0", optional = true }
pem = { version = "3.0.5", default-features = false }
rsa = { version = "0.9.8", features = ["sha2"] }
x509-parser = "0.17.0"
zip = { version = "2.5.0", default-features = false, features = ["deflate-zlib-ng"] }

# workspace dependencies
anyhow = { workspace = true }
futures = { workspace = true }
nom = { workspace = true, features = ["alloc"] }
rand_core = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["default-tls"] }
tempfile = { workspace = true }
tokio-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, features = ["log"] }

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:tokio-util"]
async-std = ["dep:async-std"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
