[package]
edition = "2021"
name = "test-runner"
version = "0.1.0"

[dependencies]
util = { path = "../../util" }

# workspace dependencies
futures = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["net"] }
yosemite = { workspace = true }
